--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+/*
 buildscript{
     ext{
         springBootVersion = '2.1.7.RELEASE'
@@ -27,5 +28,46 @@ repositories{
 
 dependencies{
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.projectlombok:lombok')
+    annotationProcessor('org.projectlombok : lombok : 1.18.8')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+} */
+/*
+plugins {
+    id 'org.springframework.boot' version '2.2.2.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+    id 'java'
 }
+
+group 'org.example'
+version '1.0-SNAPSHOT'
+sourceCompatibility = 1.8
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'com.h2database:h2'
+    annotationProcessor 'org.projectlombok:lombok'
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
+    implementation 'junit:junit:4.12'
+    compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.0'
+}
+
+test {
+    useJUnitPlatform()
+}
+ */
