naver 로그인 추가 mock test로 수정

--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -1,3 +1,18 @@
+# google-registration
 spring.security.oauth2.client.registration.google.client-id=939966060217-rjs0ca64td3115rlhc9jbdhkem4igvh7.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=DHHO9bYHeMnQFTK-67dT_Xr3
 spring.security.oauth2.client.registration.google.scope=profile,email
+
+# naver-registration
+spring.security.oauth2.client.registration.naver.client-id=2wYdE0KRemwautf06iEo
+spring.security.oauth2.client.registration.naver.client-secret=4TbKCQqRcc
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=name,email,profile_image
+spring.security.oauth2.client.registration.naver.client-name=Naver
+
+# naver-provider
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
